# OrcaCast_Public

./: .gitignore  Makefile  README.md  env.config.ts  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts  wrangler.toml
.github/workflows/: ci.yml
.tsbuildinfo/: tsconfig.app.tsbuildinfo
public/data/: data_sources.json  manifest.json  meta.json  periods.json  places_of_interest.json  prep_report.json  version.json
public/data/grids/: H4.geojson  (+2 more)
scripts/: check_artifacts.sh  register-ts-loader.mjs  run-tests.ts  ts-resolve-loader.mjs
src/: App.tsx  index.css  main.tsx  styles.css
src/cli/: __init__.py  __main__.py
src/components/: AppFooter.tsx  AppHeader.tsx  ForecastMap.tsx  ForecastPeriodPill.tsx  InfoModal.tsx  InteractiveGradientBg.tsx  MapToolbar.tsx  ProbabilityLegend.tsx  SideDrawer.tsx  ToolDrawer.tsx  WelcomeModal.tsx
src/config/: appConfig.ts  dataPaths.ts  forecastPeriod.ts  mapLayers.ts
src/data/: dataSources.ts  duckdbBrowser.ts  fetchClient.test.ts  h3.test.ts  kdeBandsIO.ts  meta.ts  periods.ts  sightingsActivity.ts  srkwPopulation.ts  validation.ts  viewabilityIO.ts  viewabilityTypes.ts
src/explainability/: __init__.py  builder.py
src/io/: load_kde_geojson.py
src/map/: deltaMap.test.ts  deltaMap.ts  gridOverlay.ts  smoothSurface.ts  sourceBackend.ts
src/pages/: AboutPage.tsx  MapPage.tsx  PlannerPage.tsx
src/state/: MapStateContext.tsx  compareStore.ts
src/styles/: base.css  components.css  layout.css  map.css
src/tour/: startMapTour.ts
src_arc/: main.tsx
src_arc/app/: App.tsx
(+584 files in other folders)
